syntax = "proto2";

package com.netty.study.sixth.protobuf;

option optimize_for = SPEED;
option java_package = "com.netty.study.sixth.protobuf";
option java_outer_classname = "MyDataInfo";

message MyMessage {

    enum DataType{
        PersonType = 1;
        DogType = 2;
        CatType = 3;
    }

    required DataType data_type = 1;

    oneof dataBody{
        Person person = 2;
        Dog dog = 3;
        Cat cat = 4;
    }

}

message Person {
    optional string name = 1;
    optional int32 age = 2;
}

message Dog {
    optional string name = 1;
    optional int32 age = 2;
}

message Cat {
    optional string name = 1;
    optional string city = 2;
}

